--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,18 @@ body{
     line-height: 1.5;
 }
 
+/* main section */
 #site-main{
     padding-bottom: 50px;
     padding-top: 50px;
+}
+
+/* footer */
+#site-footer{
+    text-align: center;
+    padding-bottom: 30px;
+    padding-top: 30px;
+    font-size: 12px;
+    background: #222;
+    color: #999;
 }
