--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,1 +1,5 @@
-i am the home page
+<div class="jumbotron text-center">
+    <h1>Home page</h1>
+
+    <a href="/events" class="btn btn-lg btn-danger">See Events</a>
+</div>
