--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,7 +15,9 @@
         <div class="navbar navbar-dark bg-dark">
             <div class="container">
                 <div class="navbar-header">
-                    <a href="/" class="navbar-brand">Football events</a>
+                    <a href="/" class="navbar-brand">Olympic games</a>
+                    <a href="/events" class="navbar-brand">Events</a>
+                    <a href="/events/create" class="navbar-brand">Create an Event</a>
                 </div>
             </div>    
         </div>   
